added and conected firebase storage

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+
+.itemList
+  padding: 1rem
+  font-family: 'Sen', sans-serif
+  font-family: 'Major Mono Display', monospace
+
+
+
+
+
