--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<p>dashboard works!</p>
+<div *ngFor="let names of playlists; index as i">
+  <button (click)="onSelectPlaylist(i)">{{names}}</button>
+</div>
+
+<div *ngIf="currentPlaylist.length > 0">
+  <div *ngFor="let song of currentPlaylist">
+    {{song.name}}
+    <audio controls>
+      <source src="{{song.url}}">
+    </audio>
+  </div>
+</div>
