--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
-<div class="playlist" *ngFor="let names of playlists; index as i">
-  <button (click)="onSelectPlaylist(i)" class="playlistNames pa1">{{names}}</button>
+<div class="playlist">
+  <div *ngFor="let names of playlists; index as i">
+    <button (click)="onSelectPlaylist(i)" class="playlistNames pa1">{{names}}</button>
+  </div>
 </div>
-
 <div *ngIf="currentPlaylist.length > 0">
   <div *ngFor="let song of currentPlaylist" class="songs">
     <p class="songsNames">{{song.name}}</p>
