--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -14,6 +14,11 @@
 .pa1
   padding: 1rem
 
+.controlButton
+  font-weight: bold
+  font-color: red
+  font-size: medium
+
 button
   border: none
   background: none
@@ -29,13 +34,5 @@ button
   border: 1px solid
   border-radius: 4px
   border-color: darkgray
-
-@media screen and (max-width: 800px)
-  .playlist
-    display: flex
-    flex-direction: column
-
-@media screen and (min-width: 801px)
-  .playlist 
-    display: flex
-    flex-direction: row
+  display: flex
+  flex-direction: column
