--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -36,3 +36,7 @@ button
   border-color: darkgray
   display: flex
   flex-direction: column
+  background: #9796f0
+  background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0)
+  background: linear-gradient(to right, #fbc7d4, #9796f0)
+
