--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -15,9 +15,8 @@
   padding: 1rem
 
 .controlButton
-  font-weight: bold
-  font-color: red
-  font-size: medium
+  font-size: x-large
+  color: teal
 
 button
   border: none
@@ -30,13 +29,14 @@ button
   text-align: center
 
 .playlist
-  width: fit-content
-  border: 1px solid
-  border-radius: 4px
+  width: 20rem
+  border-radius: 8px
   border-color: darkgray
   display: flex
   flex-direction: column
-  background: #9796f0
-  background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0)
-  background: linear-gradient(to right, #fbc7d4, #9796f0)
+  background: #a8ff78
+  background:  -webkit-linear-gradient(to right, #78ffd6, #a8ff78)
+  background: linear-gradient(to right, #78ffd6, #a8ff78)
+  align-items: center
+
 
