--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,9 @@
       <button class="controlButton pa1" (click)="pauseList()"><i class="ri-pause-circle-fill"></i></button>
       <button class="controlButton pa1" (click)="stopList()"><i class="ri-stop-circle-fill"></i></button>
       <button class="controlButton pa1" (click)="shuffleList()"><i class="ri-shuffle-line"></i></button>
-      <button class="controlButton pa1" (click)="repeatList()"><i class="ri-repeat-2-line"></i></button>
+      <button class="controlButton pa1" (click)="repeatList()"><i class="ri-refresh-line"></i></button>
+      <button class="controlButton pa1" (click)="showList()"><i class="ri-play-list-fill"></i></button>
+      
     </div>
   </div>
 </div>
@@ -20,7 +22,7 @@
   </div>
 </div> -->
 
-<i class="ri-home-heart-fill"></i>
+<!-- <i class="ri-home-heart-fill"></i>
 <i class="ri-send-plane-fill"></i>
 <i class="ri-github-fill"></i>
 <i class="ri-volume-down-fill"></i>
@@ -36,7 +38,7 @@
 <i class="ri-refresh-line"></i>
 <i class="ri-user-star-line"></i>
 <i class="ri-user-heart-line"></i>
-<i class="ri-open-arm-line"></i>
+<i class="ri-open-arm-line"></i> -->
 
 
 <!-- background: #C6FFDD;  /* fallback for old browsers */
@@ -58,3 +60,7 @@ background: linear-gradient(to right, #FF4B2B, #FF416C); /* W3C, IE 10+/ Edge, F
 background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  -->
+
+<!--  background: #9796f0
+ background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0)
+ background: linear-gradient(to right, #fbc7d4, #9796f0) -->
